--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.2.2
   provider: ^6.1.2
   cached_network_image: ^3.4.1
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
