--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.2
   cached_network_image: ^3.4.1
   flutter_secure_storage: ^9.2.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
